--- a/chekov.css
+++ b/chekov.css
@@ -20,13 +20,13 @@
     color: rgb(29, 100, 114);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.YASHA {
+.VOITSKI {
     color: rgb(177, 39, 85);
 }
-.LOPAKHIN {
+.HELENA {
     color:rgba(138, 94, 12, 0.842);
 }
-.TROFIMOV {
+.ASTROFF {
     color:rgb(21, 66, 151);
 }
 
